--- a/users/static/users/css/UsersContact.css
+++ b/users/static/users/css/UsersContact.css
@@ -1,15 +1,17 @@
 #main{
 /*
 compressed imgs are .jpg
-*/background-image: url("../img/contact-us.jpg");
+*/
+background: url("../img/contact-us.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
-background-size: 1366px 800px;
-background-attachment: fixed;
 color:#fff;
-margin-top:56px;
+
+
 }
-
-
 
 
 #contact-content{
