--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -118,6 +118,9 @@
                                     <li>
                                         <a href="{% url 'posts:articles' find='price-action-uo' %}">پرایس اکشن</a>
                                     <li>
+                                    <li>
+                                        <a href="{% url 'posts:articles' find='elliott-uo' %}">پرایس اکشن</a>
+                                    <li>
                                         <a href="{% url 'posts:articles' find='ichimoku-uo' %}">ایچی موکو</a>
                                     </li>
 
