drop down fixed

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -119,7 +119,7 @@
                                         <a href="{% url 'posts:articles' find='price-action-uo' %}">پرایس اکشن</a>
                                     <li>
                                     <li>
-                                        <a href="{% url 'posts:articles' find='elliott-uo' %}">پرایس اکشن</a>
+                                        <a href="{% url 'posts:articles' find='elliott-uo' %}">الیوت</a>
                                     <li>
                                         <a href="{% url 'posts:articles' find='ichimoku-uo' %}">ایچی موکو</a>
                                     </li>
