--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -49,10 +49,7 @@
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                   <span>منو</span>
                 </button>
 
             </div>
@@ -114,10 +111,10 @@
                                                                                            aria-haspopup="true"
                                                                                            aria-expanded="false">
                                 انس جهانی </a>
-                                <ul class="dropdown-menu menu4">
+                                <ul class="dropdown-menu menu5">
                                     <li>
                                         <a href="{% url 'posts:articles' find='price-action-uo' %}">پرایس اکشن</a>
-                                    <li>
+                                    </li>
                                     <li>
                                         <a href="{% url 'posts:articles' find='elliott-uo' %}">الیوت</a>
                                     <li>
@@ -135,14 +132,14 @@
                                                                                             aria-haspopup="true"
                                                                                             aria-expanded="false">
                                 جفت ارزها </a>
-                                <ul class="dropdown-menu menu5">
+                                <ul class="dropdown-menu menu6">
                                       <li>
                                         <a href="{% url 'posts:articles' find='price-action-poc' %}">پرایس اکشن</a>
                                     <li>
-                                        <a href="{% url 'posts:articles' find='ichimoku-poc' %}">ایچی موکو</a>
+                                        <a href="{% url 'posts:articles' find='elliott-poc' %}">الیوت</a>
                                     </li>
 
-                                    <li><a href="{% url 'posts:articles' find='domestic_dollar' %} ">دلار داخلی</a></li>
+                                    <li><a href="{% url 'posts:articles' find='ichimoku-poc' %} ">ایچی موکو</a></li>
 
                                 </ul>
                             </li>
