--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -197,6 +197,8 @@
                 <p class="navbar-text navbar-right"><a href="/calender/" class="navbar-link">تقویم اقتصادی</a>
                 </p>
 
+<p class="navbar-text navbar-right"><a href="/bankorders/" class="navbar-link">اوردر بانک</a>
+                </p>
 
             </div>
 
