new drop down colors fixed in small devices

--- a/posts/templates/posts/BankOrders.html
+++ b/posts/templates/posts/BankOrders.html
@@ -17,7 +17,7 @@
 {% endblock %}
  {% block title %}
 
-<title>Bank Orders</title>
+<title>Order Bank</title>
     {% endblock %}
 {% block body %}
 <div class="container-fluid" id="BankOrders-container" dir="ltr">
