--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -183,8 +183,9 @@
 
             {% if comments.children %}
 
-            <button class="show-replies btn btn-default btn-sm">نمایش {{comments.public_children.count|persian_numeric}}پاسخ
-            </button>
+            {% if comments.public_children.count > 1 %}
+            <button class="show-replies btn btn-default btn-sm">نمایش {{comments.public_children.count|persian_numeric}}پاسخ</button>
+            {% endif %}
             <div class="see-replies">
 
 
