detail bio safe and max-width/height added to img

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -87,7 +87,7 @@
                                             <a href="{% url 'posts:author-view' author_username=post.author %}" >{{ post.author }}</a>
                                         </span>
                                         <p id="author-bio">
-                                        {{post.author.bio}}
+                                        {{post.author.bio|safe}}
                                     </p>
 
 
