--- a/posts/static/posts/css/detail.css
+++ b/posts/static/posts/css/detail.css
@@ -30,7 +30,7 @@ padding:0px;
 
 }
 
-#detail-container .post-text p img {
+#detail-container #post-text p img {
 
 display:inline-block;
 max-width: 800px;
