--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -84,7 +84,7 @@
 
 
                                         <span id="author-username">
-                                            <a href="{% url 'posts:author-view' author_username=post.author %}" >{{ post.author }}</a>
+                                            <a href="{% url 'posts:author-view' author_username=post.author %}">{{ post.author.user.first_name }} {{ post.author.user.last_name }}</a>
                                         </span>
                                         <p id="author-bio">
                                         {{post.author.bio|safe}}
