date_published checked in homepage

--- a/users/templates/users/UsersContact.html
+++ b/users/templates/users/UsersContact.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block style %}
-<link rel="stylesheet" type="text/css" href="{% static 'specificpages/css/UsersContact.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'users/css/UsersContact.css' %}"/>
 {% endblock %}
 
 {% block title %}
