--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -33,6 +33,7 @@
 
                 <div class="post infinite-container">
                     {% for post in posts %}
+                  {% if post.date_published|reached_time_published %}
                     <div class="row infinite-item"
                          style="">
 
@@ -52,7 +53,7 @@
                                     <h2 style="padding:10px;padding-top:0px;"> {{ post.header }}</h2>
 
                                     <p>{{ post.description|safe|striptags }}<a class="detail-link"
-                                                                     href="{% url 'posts:detail' header=post.header|fix_spaces %}">بیشتر</a></p>
+                                                                     href="{% url 'posts:detail' header=post.header|fix_spaces %}">...بیشتر</a></p>
 
 
                                 </div>
@@ -60,7 +61,7 @@
                                     <li>
 
 <span class="glyphicon glyphicon-user" aria-hidden="true"
-      style="font-size:15px;"></span> <a href="{% url 'posts:author-view' author_username=post.author %}">{{ post.author}}</a>
+      style="font-size:15px;"></span> <a href="{% url 'posts:author-view' author_username=post.author %}">{{ post.author.user.first_name }} {{ post.author.user.last_name }}</a>
                                     </li>
 
 
@@ -87,6 +88,7 @@
                         </div>
 
                     </div>
+                    {% endif %}
                     {% endfor %}
                 </div>
                 {% block infinite-scroll  %}
@@ -123,7 +125,7 @@
 
                     {% for item in most_seen %}
 
-
+                    {% if item.date_published|reached_time_published %}
                     <div class="most-seen-post">
                         <div class="img-of-most-seen-post">
                             <img src="{{item.img.url}}">
@@ -133,7 +135,7 @@
                         </div>
                     </div>
 
-
+{% endif %}
                     {% endfor %}
 
 
