date_published checked in detail?

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -3,7 +3,7 @@
 {% load jalali_tags %}
 {% load custom_tags %}
 {% load staticfiles %}
-
+// TODO:check date_published in recommended post
 {% block meta %}
 <meta name="keywords" content="{{post.MainTag}},{% for tag in post.Tags %} {{tag}},{% endfor %}">
 <meta name="description" content="{{post.description}}">
