tariffs img added tariffs page edited and currencies img added

--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -26,26 +26,26 @@
         <td>
             {% if query.stock == 'USD' %}
 
-            <img src="/currencies/USD.png">
+            <img src="posts/currencies/USD.png">
 
 
             {% elif query.stock == 'EUR' %}
-            <img src="/currencies/EUR.png">
+            <img src="static/posts/currencies/EUR.png">
 
             {% elif query.stock == 'CHF' %}
-            <img src="/currencies/CHF.png">
+            <img src="static/posts/currencies/CHF.png">
 
             {% elif query.stock == 'CAD' %}
-            <img src="/currencies/CAD.png">
+            <img src="static/posts/currencies/CAD.png">
 
             {% elif query.stock == 'AUD' %}
-            <img src="/currencies/AUD.png">
+            <img src="static/posts/currencies/AUD.png">
 
             {% elif query.stock == 'JPY' %}
-            <img src="/currencies/JPY.png">
+            <img src="static/posts/currencies/JPY.png">
 
             {% elif query.stock == 'BTC' %}
-            <img src="/currencies/BTC.png">
+            <img src="/staticposts/currencies/BTC.png">
 
             {% elif query.stock == 'NZD' %}
             <img src="/currencies/NZD.png">
