--- a/specificpages/static/specificpages/css/tariffs.css
+++ b/specificpages/static/specificpages/css/tariffs.css
@@ -3,26 +3,40 @@
 padding:20px;
 
 }
+
+.specificpage-container jubotron p{
+
+
+
+
+font-size:15px
+
+
+
+}
 .tariffs{
-max-width:450px;
+max-width:600px;
 padding:20px;
 margin:10px auto;
 border: 1px solid rgba(0, 0, 0, .09);
 
 box-shadow: 0px 1px 4px #bbb;
-height:100px;
+height:200px;
 }
+
+
 .tariffs-img{
 
 float:right;
-width:20%;
-
+width:40%;
+height:100%
 
 }
 .description{
 
 float:left;
-width:80%;
+width:60%;
+padding:20px;
 
 }
 .description a{
