some link and src fixed

--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -26,32 +26,32 @@
         <td>
             {% if query.stock == 'USD' %}
 
-            <img src="posts/currencies/USD.png">
+            <img src="/posts/currencies/USD.png">
 
 
             {% elif query.stock == 'EUR' %}
-            <img src="static/posts/currencies/EUR.png">
+            <img src="/static/posts/currencies/EUR.png">
 
             {% elif query.stock == 'CHF' %}
-            <img src="static/posts/currencies/CHF.png">
+            <img src="/static/posts/currencies/CHF.png">
 
             {% elif query.stock == 'CAD' %}
-            <img src="static/posts/currencies/CAD.png">
+            <img src="/static/posts/currencies/CAD.png">
 
             {% elif query.stock == 'AUD' %}
-            <img src="static/posts/currencies/AUD.png">
+            <img src="/static/posts/currencies/AUD.png">
 
             {% elif query.stock == 'JPY' %}
-            <img src="static/posts/currencies/JPY.png">
+            <img src="/static/posts/currencies/JPY.png">
 
             {% elif query.stock == 'BTC' %}
-            <img src="/staticposts/currencies/BTC.png">
+            <img src="/static/posts/currencies/BTC.png">
 
             {% elif query.stock == 'NZD' %}
-            <img src="/currencies/NZD.png">
+            <img src="/static/currencies/NZD.png">
 
             {% else %}
-            <img src="/currencies/GBP.png">
+            <img src="/static/currencies/GBP.png">
 
 
             {% endif %}
