some link and src fixed

--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -26,7 +26,7 @@
         <td>
             {% if query.stock == 'USD' %}
 
-            <img src="/posts/currencies/USD.png">
+            <img src="/static/posts/currencies/USD.png">
 
 
             {% elif query.stock == 'EUR' %}
@@ -48,10 +48,10 @@
             <img src="/static/posts/currencies/BTC.png">
 
             {% elif query.stock == 'NZD' %}
-            <img src="/static/currencies/NZD.png">
+            <img src="/static/posts/currencies/NZD.png">
 
             {% else %}
-            <img src="/static/currencies/GBP.png">
+            <img src="/static/posts/currencies/GBP.png">
 
 
             {% endif %}
